// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Songs Mutations should add comment to the song 1`] = `
Object {
  "addComment": Object {
    "artist": "The Midnight",
    "audio": "LosAngeles",
    "comments": Array [
      Object {
        "text": "Test comment",
        "user": Object {
          "avatar": "...",
          "isArtist": null,
          "name": "test",
        },
      },
    ],
    "cover": "https://scontent-prg1-1.xx.fbcdn.net/v/t1.0-9/44883276_2160020650889409_8949487783479607296_n.jpg?_nc_cat=107&_nc_oc=AQnVcG20lk3-m112Suw1y55PovPGTdDmScc_ENTqVQOBrZTl-giFBV71MEzLVvjl8rbazDD0qK55rK6859UkL4AI&_nc_ht=scontent-prg1-1.xx&oh=0e884e2a8643364267b2d42968551401&oe=5E255286",
    "description": "Placeholder",
    "isLiked": true,
    "listens": 34000,
    "name": "Los Angeles",
    "tags": Array [
      Object {
        "isImportant": true,
        "value": "New Synth Wave",
      },
      Object {
        "isImportant": true,
        "value": "🔥 Popular",
      },
      Object {
        "isImportant": null,
        "value": "Electronic",
      },
      Object {
        "isImportant": null,
        "value": "Retro",
      },
      Object {
        "isImportant": null,
        "value": "Outrun",
      },
    ],
  },
}
`;

exports[`Songs Mutations should like the song 1`] = `
Object {
  "setLike": Object {
    "artist": "The Midnight",
    "audio": "LosAngeles",
    "comments": null,
    "cover": "https://scontent-prg1-1.xx.fbcdn.net/v/t1.0-9/44883276_2160020650889409_8949487783479607296_n.jpg?_nc_cat=107&_nc_oc=AQnVcG20lk3-m112Suw1y55PovPGTdDmScc_ENTqVQOBrZTl-giFBV71MEzLVvjl8rbazDD0qK55rK6859UkL4AI&_nc_ht=scontent-prg1-1.xx&oh=0e884e2a8643364267b2d42968551401&oe=5E255286",
    "description": "Placeholder",
    "isLiked": true,
    "listens": 34000,
    "name": "Los Angeles",
    "tags": Array [
      Object {
        "isImportant": true,
        "value": "New Synth Wave",
      },
      Object {
        "isImportant": true,
        "value": "🔥 Popular",
      },
      Object {
        "isImportant": null,
        "value": "Electronic",
      },
      Object {
        "isImportant": null,
        "value": "Retro",
      },
      Object {
        "isImportant": null,
        "value": "Outrun",
      },
    ],
  },
}
`;

exports[`Songs Mutations should unlike the song 1`] = `
Object {
  "setLike": Object {
    "artist": "September 87",
    "audio": "BadDreamBaby",
    "comments": null,
    "cover": "https://i.vimeocdn.com/video/526078435_1280x720.jpg",
    "description": "This song is by September 87 and features Dream Fiend.",
    "isLiked": false,
    "listens": 145202,
    "name": "Bad Dream Baby",
    "tags": Array [
      Object {
        "isImportant": true,
        "value": "New Synth Wave",
      },
      Object {
        "isImportant": true,
        "value": "🔥 Popular",
      },
      Object {
        "isImportant": null,
        "value": "Electronic",
      },
      Object {
        "isImportant": null,
        "value": "Retro",
      },
      Object {
        "isImportant": null,
        "value": "Outrun",
      },
    ],
  },
}
`;
